# x402insuranceavax

./: .dockerignore  .env.example  .gitignore  .renderignore  AGENT_DISCOVERY.md  CHANGELOG.md  DEPLOYMENT.md  DOCKER.md  DOCKER_HUB_SETUP.md  Dockerfile  Dockerfile.dev  Dockerfile.render  E2E_TEST_RESULTS.md  IMPROVEMENTS.md  PRODUCTION_README.md  PRODUCTION_READY.md  QUICK_START_DOCKER_HUB.md  README.md  RENDER_SPEED_TIPS.md  SIMPLE_DEPLOY.md  VERIFICATION_FLOW.md  blockchain.py  config.py  database.py  docker-compose.dev.yml  docker-compose.yml  openapi.yaml  pyproject.toml  render.yaml  render.yaml.example  requirements.txt  run_e2e_test.sh  server.py  setup_wallet.py  test_e2e_real.py  test_micropayment.py  test_minimal_claim.py  test_zkengine.py  x402_client.py  zkengine_client.py
.github/workflows/: ci.yml
auth/: __init__.py  payment_verifier.py
docker/: Dockerfile.prod
docs/: PRODUCTION_READY.md  README.md  SECURITY_IMPROVEMENTS.md  VERIFICATION_FLOW.md
docs/archive/: SECURITY_CLEANUP_SUMMARY.md  UI_TIMELINE_VIEW.md  X402_PAYMENT_IMPLEMENTATION_REVIEW.md
docs/development/: AGENT_DISCOVERY.md  E2E_TEST_RESULTS.md  PAYMENT_FLOW_ARCHITECTURE.md  PAYMENT_IMPLEMENTATION_QUICKREF.md  POSITIONING.md
docs/guides/: DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  DOCKER.md  PRODUCTION_SETUP.md  RENDER.md  WALLET_SETUP_GUIDE.md
scripts/: production_setup.sh
solana/: HACKATHON_STRATEGY.md  QUICKSTART.md  README.md  SOLANA_MIGRATION_PLAN.md
static/: api-docs.html  dashboard.html
static/.well-known/: agent-card.json
tasks/: __init__.py  reserve_monitor.py
tests/e2e/: test_e2e_real.py
tests/unit/: test_blockchain.py  test_critical_fixes.py  test_database.py  test_payment_verifier.py
