[tool.poetry]
name = "x402-insurance"
version = "1.0.0"
description = "ZKP-verified insurance against x402 merchant fraud (Flask prototype)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
web3 = "^6.11.0"
httpx = "^0.25.0"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.10.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
